# assignment4

./: .gitignore  AnimalEnclosure.cpp  AnimalEnclosure.h  AnimalFood.cpp  AnimalFood.h  CMakeLists.txt  Money.cpp  Money.h  Zoo.cpp  Zoo.h  main.cpp
Animal/: Animal.cpp  Animal.h  Elephant.cpp  Elephant.h  Giraffe.cpp  Giraffe.h  Monkey.cpp  Monkey.h
Person/: Adult.cpp  Adult.h  Child.cpp  Child.h  FoodSeller.cpp  FoodSeller.h  Person.cpp  Person.h  Visitor.cpp  Visitor.h  ZooKeeper.cpp  ZooKeeper.h
